--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ patio tomatoes, Bells of Irland, etc.
               <ul class="footer_list_items">
                 <li class="prof">PROFOLE</li>
                 <li class="manag">MANAGEMENT</li>
-                <li class="prod">PRODUCTS</li>
+                <li class="prod"><a href="index2.html">PRODUCTS</a></li>
                 <li class="r_a_d">R&D</li>
                 <li class="link">LINKS</li>
                 <li class="s_map">SITEMAP</li>
