--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                       <ul class="nav_panel">
                           <li><a href="#">Home</a></li>
                           <li><a href="#">Company Profile</a></li>
-                          <li><a href="#">Products</a></li>
+                          <li><a href="#"><a href="index2.html">Products</a></li>
                           <li><a href="#">Services</a></li>
                           <li><a href="#">R & D</a></li>
                           <li><a href="#">Contact</a></li>
@@ -172,7 +172,7 @@ patio tomatoes, Bells of Irland, etc.
               <ul class="footer_list_items">
                 <li class="prof">PROFOLE</li>
                 <li class="manag">MANAGEMENT</li>
-                <li class="prod"><a href="index2.html">PRODUCTS</a></li>
+                <li class="prod">PRODUCTS</li>
                 <li class="r_a_d">R&D</li>
                 <li class="link">LINKS</li>
                 <li class="s_map">SITEMAP</li>
