--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
                      </button> 
                      <nav>
                       <ul class="nav_panel">
-                          <li><a href="#">Home</a></li>
+                          <li><a href="#"><a href="index.html">Home</a></li>
                           <li><a href="#">Company Profile</a></li>
                           <li><a href="#">Products</a></li>
                           <li><a href="#">Services</a></li>
