--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                       <ul class="nav_panel">
                           <li><a href="#">Home</a></li>
                           <li><a href="#">Company Profile</a></li>
-                          <li><a href="#"><a href="index2.html">Products</a></li>
+                          <li><a href="index2.html">Products</a></li>
                           <li><a href="#">Services</a></li>
                           <li><a href="#">R & D</a></li>
                           <li><a href="#">Contact</a></li>
